# HW19.2

./: .gitignore  README.md  catalog.json  pyproject.toml  requirements.txt
catalog/: models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py
catalog/templates/: home.html  product_detail.html  products_list.html
config/: settings.py
